[package]
name = "f-xoss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = "0.10.5"
uuid = "1.3.2"

hex = "0.4.3"
binrw = "0.11.1"
thiserror = "1.0.40"
crc16 = "0.4.0"
humansize = "2.1.3"
indicatif = "0.17.3"

tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread", "io-util"] }
tokio-stream = "0.1.14"
tokio-util = { version = "0.7.8", features = ["io"] }
futures-util = "0.3.28"
#pin-project-lite = "0.2.9"
bytes = "1.4.0"
async-stream = "0.3.5"

anyhow = "1.0.71"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing-futures = { version = "0.2.5", features = ["futures-03"] }
tracing-indicatif = "0.3.4"

[target.'cfg(target_os = "windows")'.dependencies]
ansi_term = "0.12.1"

[target.'cfg(target_os = "linux")'.dependencies]
dbus = { version = "0.9.7", features = ["vendored"] }
