[package]
name = "f-xoss"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/DCNick3/f-xoss.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = "0.10.5"
uuid = "1.3.2"
itertools = "0.10.5"

hex = "0.4.3"
binrw = "0.11.1"
num_enum = "0.6.1"
thiserror = "1.0.40"
humansize = "2.1.3"
indicatif = "0.17.3"
directories = "5.0.1"
clap = { version = "4.2.7", features = ["derive"] }
clap_complete = "4.2.3"
prettytable-rs = "0.10.0"
dialoguer = "0.10.4"
console = "0.15.7"
owo-colors = "3.5.0"
similar = "2.2.1"

crc16 = "0.4.0"
once_cell = "1.17.1"
chrono = "0.4.24"
camino = "1.1.4"

serde = "1.0.163"
serde_repr = "0.1"
serde_tuple = "0.5.0"
serde_json = "1.0.96"
toml = "0.7.3"

tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread", "io-util", "fs"] }
tokio-stream = "0.1.14"
tokio-util = { version = "0.7.8", features = ["io"] }
futures-util = "0.3.28"
bytes = "1.4.0"
async-stream = "0.3.5"
async-trait = "0.1.68"
surf = { version = "2.3.2", default-features = false, features = ["h1-client-rustls", "middleware-logger"] }

anyhow = "1.0.71"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing-futures = { version = "0.2.5", features = ["futures-03"] }
tracing-indicatif = "0.3.4"

[target.'cfg(target_os = "windows")'.dependencies]
ansi_term = "0.12.1"

[target.'cfg(target_os = "linux")'.dependencies]
dbus = { version = "0.9.7", features = ["vendored"] }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.7"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.67.1"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc", "aarch64-apple-darwin"]
